cinema-application/api.deployment.v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movieapi
  labels:
    app: movieapi
spec:
  selector:
    matchLabels:
      app: movieapi
  replicas: 5
  template:
    metadata:
      labels:
        app: movieapi
    spec:
      containers:
      - name: movieapi
        image: movieapi:3.0
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /alive
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
