cinema-application/db.deployment.v0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbmovie
  labels:
    app: dbmovie
spec:
  selector:
    matchLabels:
      app: dbmovie
  replicas: 1
  template:
    metadata:
      labels:
        app: dbmovie
    spec:
      containers:
      - name: dbmovie
        image: mysql:8
        ports:
        - containerPort: 3306
