cinema-application/db.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dbmovie
  labels:
    app: dbmovie
spec:
  selector:
    matchLabels:
      app: dbmovie
  serviceName: dbmovie
  replicas: 1
  template:
    metadata:
      labels:
        app: dbmovie
    spec:
      containers:
      - name: dbmovie
        image: mysql:8
        ports:
        - containerPort: 3306
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: dbmovie-data
  volumeClaimTemplates:
  - metadata:
      name: dbmovie-data
    spec:
      resources:
        requests:
          storage: 2G
      volumeMode: Filesystem
      accessModes:
        - ReadWriteOnce
