cinema-application/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movieapi
  labels:
    app: movieapi
spec:
  type: LoadBalancer
  selector:
    app: movieapi
  ports:
  - port: 8080
    targetPort: 8080
