cinema-application/db.service.v0.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbmovie
spec:
  type: ClusterIP
  selector:
    app: dbmovie
  ports:
  - port: 3306
    targetPort: 3306
