cinema-application/db.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbmovie-allow-from-api
spec:
  podSelector:
    matchLabels:
      app: dbmovie
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: movieapi
      ports:
        - protocol: TCP
          port: 3306
